--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0" CACHE STRING "Debug fla
 if(WIN32)
     if(USE_MINGW OR CMAKE_CXX_COMPILER_ID MATCHES "GNU")
         message(STATUS "Configuring for MinGW")
-        target_compile_options(stack_overflow PRIVATE -Wall -Wextra -fno-optimize-sibling-calls)
+        target_compile_options(stack_overflow PRIVATE -Wall -fno-optimize-sibling-calls)
         target_link_options(stack_overflow PRIVATE -Wl,--stack=${STACK_SIZE})
     elseif(USE_MSVC OR CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
         message(STATUS "Configuring for MSVC")
@@ -39,7 +39,7 @@ if(WIN32)
     endif()
 else()
     message(STATUS "Configuring for Linux/MacOS")
-    target_compile_options(stack_overflow PRIVATE -Wall -Wextra -fno-optimize-sibling-calls)
+    target_compile_options(stack_overflow PRIVATE -Wall -fno-optimize-sibling-calls)
     target_compile_definitions(stack_overflow PRIVATE _POSIX_C_SOURCE=200809L)
 endif()
 
